# Stream-xlsx

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py  benchmark_python.py  dhat-heap.json  main.py  pyproject.toml
.gitea/workflows/: ci.yaml  demo.yaml
.github/workflows/: ci.yaml
src/: ai_iter.rs  generate_test_xlsx.rs  lib.rs  main.rs  read_iter.rs  shell_completion.rs
src/stream_xlsx/: df_iter.rs  excel_types.rs  mod.rs  xlsx_stream.rs  xlsx_stream_unsafe.rs
src/testmode/: mod.rs
src/transform/: mod.rs
stream_xlsx/: Cargo.toml
stream_xlsx/src/: df_iter.rs  excel_types.rs  lib.rs  stream_reader.rs  utils.rs  workbook.rs  xlsx_stream.rs  xlsx_stream_lm.rs  xlsx_stream_unsafe.rs
stream_xlsx_py/: Cargo.toml  pyproject.toml  stream_xlsx_py.pyi
stream_xlsx_py/src/: lib.rs  stream_xlsx_py.pyi
