[workspace]
members = [".", "stream_xlsx"]
default-members = [".", "stream_xlsx"]
resolver = "2"

[package]
name = "sxlsx"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.53.0", features = ["csv", "parquet"] }
rust_xlsxwriter = "0.84"
rand = "0.9"
anyhow = "1.0.102"
stream_xlsx = { path = "stream_xlsx" }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
dhat = "0.3.3"

[profile.release]
opt-level = 3
lto = "fat"           # 最大化跨 crate 优化
codegen-units = 1
panic = "abort"       # 不需要 unwind 时能再提升一点性能
strip = true
