[project]
name = "project-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.20.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "polars>=1.40.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "stream_xlsx_py/Cargo.toml"
module-name = "stream_xlsx"

[tool.uv.workspace]
members = [
    "project_x",
]
