[project]
name = "project-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.20.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "polars>=1.40.1",
]

[tool.uv.workspace]
members = [
    "project_x/stream_xlsx_py",
]
